Reperformed conversion using tweaked prompt